--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content=
 		"width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet">
+    <link href="./images/html5icon.png" rel="icon">
 	<title>
 		Build a Survey Form using HTML and CSS
 	</title>
